# ktm-lua

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: run_build_work.yml
include/: lcomp.h  lcomp.hpp  lktmlib.h  lktmlib.hpp  lmat.h  lmat2x2.hpp  lmat2x3.hpp  lmat2x4.hpp  lmat3x2.hpp  lmat3x3.hpp  lmat3x4.hpp  lmat4x2.hpp  lmat4x3.hpp  lmat4x4.hpp  lntr_binding.hpp  lquat.h  lquat.hpp  lua_ktm_api.h  lua_ktm_api.inl  lua_ntr_api.hpp  lvec.h  lvec2.h  lvec2.hpp  lvec3.hpp  lvec4.hpp
scripts/: ktm.lua  test.lua
source/: ktm_lua.cpp  lcomp.cpp  lktm_api.cpp  lktm_api.h  lktm_api.inl  lktmlib.cpp  lmat.cpp  lmat2x2.cpp  lmat2x3.cpp  lmat2x4.cpp  lmat3x2.cpp  lmat3x3.cpp  lmat3x4.cpp  lmat4x2.cpp  lmat4x3.cpp  lmat4x4.cpp  lntr_binding.cpp  lquat.cpp  ltype_comp.h  ltype_comp.inl  ltype_mat.h  ltype_mat.inl  ltype_quat.h  ltype_quat.inl  ltype_vec.h  ltype_vec.inl  lua_api_ext.h  lua_ktm.cpp  lua_ktm_api.cpp  lua_ktm_api.h  lua_ktm_api.inl  lua_ntr_api.cpp  lua_type_mat.h  lua_type_vec.h  lvec.cpp  lvec2.cpp  lvec3.cpp  lvec4.cpp  main.cpp
src/: lcomp.h  lmat.cpp  lquat.cpp  lua_ktm.cpp  lua_ktm_api.cpp  lua_ktm_api.h  lua_ktm_api.inl  lvec.h
test/: ktm-lua.cpp  ktm_test.lua
